//
// Copyright 2022 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.functions;

service TrustedRuntime {
  // method_id: 0
  rpc HandleUserRequest(UserRequest) returns (UserRequestResponse);
  // method_id: 1
  rpc Initialize(Initialization) returns (InitializeResponse);
  // Replaces the existing lookup data with the new value.
  // method_id: 2
  rpc UpdateLookupData(LookupData) returns (Empty);
}

message UserRequest {
  bytes body = 1;
}

message UserRequestResponse {
  bytes body = 1;
}

message Initialization {
  bytes wasm_module = 1;
  uint32 constant_response_size = 2;
}

message InitializeResponse {
  PublicKeyInfo public_key_info = 1;
}

message PublicKeyInfo {
  bytes public_key = 1;
  bytes attestation = 2;
}

message LookupDataEntry {
  bytes key = 1;
  bytes value = 2;
}

message LookupData {
  repeated LookupDataEntry items = 1;
}

message Empty {}
